@startuml



class UIClasses #A020F0{

}
class MainMenuUI #A020F0{

}
class LogicClasses #EB937F{}
class DataClasses  #ADD1b2{}


class LogicWrapper{
    all_logic_layer_classes
    allexposedLLfunctions()
}
class DataWrapper{
    all_storage_layer_classes
    allexposedIOfunctions()
}


UIClasses --MainMenuUI
MainMenuUI  --  LogicWrapper
LogicWrapper -- LogicClasses
LogicClasses -- DataWrapper
DataWrapper -- DataClasses


/'
Data layer
'/


@enduml